--- a/matching.ipynb
+++ b/matching.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -14,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "agi = Agilent.from_root('data/test3')"
@@ -22,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 171,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "agi = Agilent.from_root('data/test3')\n",
@@ -34,21 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 172,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_match(x, Y):\n",
     "    ''' find index of argmin lambda(x,Y)\n",
     "    if .idxmin()>threshold return NA\n",
     "    '''\n",
-    "    threshold = 0.5\n",
-    "    score = lambda y: (x - y)**2\n",
+    "    threshold = 0.1\n",
+    "    def score(y):\n",
+    "        u = (x - y)**2\n",
+    "        return u if u < threshold else np.nan\n",
+    "\n",
     "    return_value = Y.apply(score).idxmin()\n",
-    "#     if return_value>threshold:\n",
-    "#         return_value = return_value+100\n",
+    "    return return_value\n",
     "    return return_value\n",
     "\n",
     "def _rt_match(lib_row, rt):\n",
@@ -57,22 +63,28 @@
     "    x, i = lib_row.rt, lib_row.name\n",
     "    return find_match(x, rt[i:])\n",
     "\n",
-    "def _matchiter(lib,area):\n",
+    "def _matchiter(lib, area):\n",
     "    '''match area on rt from single df\n",
     "    len(libdf)<len(areadf) then switch\n",
     "    '''\n",
+    "    \n",
+    "    lib = lib.assign(area=np.nan)\n",
     "\n",
-    "    xi = lib.apply(_rt_match, rt=area.rt.sort_values(), axis=1)\n",
-    "    lib['area'] = area.area[xi].values\n",
+    "    if lib.shape[0] > area.shape[0]:\n",
+    "        xi = area.apply(_rt_match, rt=lib.rt.sort_values(), axis=1)\n",
+    "        xi, yi = xi[~pd.isnull(xi)], xi[~pd.isnull(xi)].index\n",
+    "        lib.area[xi] = area.area[yi]\n",
+    "    else:  \n",
+    "        xi = lib.apply(_rt_match, rt=area.rt.sort_values(), axis=1)\n",
+    "        xi, yi = xi[~pd.isnull(xi)], xi[~pd.isnull(xi)].index\n",
+    "        lib.area[yi] = area.area[xi].values\n",
     "    return lib.set_index('key')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 173,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -110,7 +122,7 @@
        "      <th>FA03.D</th>\n",
        "      <td>1=</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>6.2000</td>\n",
+       "      <td>5.7877</td>\n",
        "      <td>2.0335</td>\n",
        "      <td>Methyl octanoate</td>\n",
        "      <td>17.0</td>\n",
@@ -128,7 +140,7 @@
        "      <td>1.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>98.0</td>\n",
-       "      <td>2491449.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -152,7 +164,7 @@
        "      <td>3.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>98.0</td>\n",
-       "      <td>2905961.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -164,7 +176,7 @@
        "      <td>4.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>1436154.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -176,7 +188,7 @@
        "      <td>5.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>1379404.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -188,7 +200,7 @@
        "      <td>6.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>3443757.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -200,7 +212,7 @@
        "      <td>7.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>1449016.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -212,7 +224,7 @@
        "      <td>6.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>83.0</td>\n",
-       "      <td>1821171.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -224,7 +236,7 @@
        "      <td>9.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>1571132.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -236,7 +248,7 @@
        "      <td>10.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>97.0</td>\n",
-       "      <td>5489579.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -248,7 +260,7 @@
        "      <td>11.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>1605355.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -260,7 +272,7 @@
        "      <td>12.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>99.0</td>\n",
-       "      <td>1401681.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -272,7 +284,7 @@
        "      <td>22.0</td>\n",
        "      <td>000000-00-0</td>\n",
        "      <td>58.0</td>\n",
-       "      <td>1456720.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FA03.D</th>\n",
@@ -449,7 +461,7 @@
       "text/plain": [
        "       header=    pk       rt  pct_area  \\\n",
        "key                                       \n",
-       "FA03.D      1=   1.0   6.2000    2.0335   \n",
+       "FA03.D      1=   1.0   5.7877    2.0335   \n",
        "FA03.D      2=   2.0   7.3441    3.4015   \n",
        "FA03.D      3=   3.0   8.0364    1.7448   \n",
        "FA03.D      4=   4.0   8.6715    3.9674   \n",
@@ -512,19 +524,19 @@
        "        qual        area  \n",
        "key                       \n",
        "FA03.D  96.0   1489466.0  \n",
-       "FA03.D  98.0   2491449.0  \n",
+       "FA03.D  98.0         NaN  \n",
        "FA03.D  98.0   1277982.0  \n",
-       "FA03.D  98.0   2905961.0  \n",
-       "FA03.D  99.0   1436154.0  \n",
-       "FA03.D  99.0   1379404.0  \n",
-       "FA03.D  99.0   3443757.0  \n",
-       "FA03.D  99.0   1449016.0  \n",
-       "FA03.D  83.0   1821171.0  \n",
-       "FA03.D  99.0   1571132.0  \n",
-       "FA03.D  97.0   5489579.0  \n",
-       "FA03.D  99.0   1605355.0  \n",
-       "FA03.D  99.0   1401681.0  \n",
-       "FA03.D  58.0   1456720.0  \n",
+       "FA03.D  98.0         NaN  \n",
+       "FA03.D  99.0         NaN  \n",
+       "FA03.D  99.0         NaN  \n",
+       "FA03.D  99.0         NaN  \n",
+       "FA03.D  99.0         NaN  \n",
+       "FA03.D  83.0         NaN  \n",
+       "FA03.D  99.0         NaN  \n",
+       "FA03.D  97.0         NaN  \n",
+       "FA03.D  99.0         NaN  \n",
+       "FA03.D  99.0         NaN  \n",
+       "FA03.D  58.0         NaN  \n",
        "FA03.D  99.0  11356919.0  \n",
        "FA03.D  98.0   4171988.0  \n",
        "FA03.D  99.0   1390417.0  \n",
@@ -541,7 +553,7 @@
        "FA03.D  99.0   2669875.0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +563,27 @@
     "area_grouped = (area.groupby(area.index))\n",
     "\n",
     "_matchiter(lib_grouped.get_group('FA03.D').reset_index(),\n",
-    "           area_grouped.get_group('FA03.D').reset_index())\n"
+    "           area_grouped.get_group('FA03.D').reset_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lib_grouped.get_group('FA03.D').reset_index())"
    ]
   },
   {
@@ -566,14 +598,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -616,7 +643,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# xi = lib.apply(rt_match, rt=tic.rt.sort_values(), axis=1)\n",
@@ -632,7 +661,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# %matplotlib inline\n",
@@ -653,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import numpy as np\n",
@@ -697,28 +730,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
